# types-annotations

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  pyproject.toml
.github/workflows/: main.yaml
type_annotations/: advanced.py  basic.py  intermediate.py
