[tool.poetry]
name = "type-annotations"
version = "0.1.0"
description = ""
authors = ["okravchenko <okravchenko@uma.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
mypy = "^1.14.0"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
